fix: Prevent hero image from jumping on load
When the hero image loads, it jumps right between the moment it turns from nothing to something. Not exactly sure why this happens, but by setting the grid to a fixed size this is prevented.

--- a/app/frontend/scss/elements/_hero.scss
+++ b/app/frontend/scss/elements/_hero.scss
@@ -18,6 +18,7 @@
     grid-template:
       "heading image"
       "subheading image";
+    grid-template-columns: clamp(20rem, 35vw, 30rem) auto;
     align-items: center;
     gap: 0 $margin * 2;
     padding-top: $margin * 8;
